--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -104,20 +104,31 @@
                     android:id="@+id/events"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/list_item_size"
-                    android:layout_marginTop="@dimen/item_spacing"
-                    android:visibility="gone">
+                    android:layout_marginTop="@dimen/item_spacing">
 
-
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="16dp"
-                        android:background="@android:color/transparent"
-                        android:text="Events"
-                        android:textColor="@color/grey10"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/ic_event"
+                            android:tint="@color/colorAccent" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:background="@android:color/transparent"
+                            android:text="Events"
+                            android:textColor="@color/grey10"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
 
 
                 </android.support.v7.widget.CardView>
@@ -147,7 +158,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/list_item_size"
                     android:layout_marginTop="@dimen/item_spacing"
-                    android:layout_marginBottom="4dp">
+                    android:layout_marginBottom="4dp"
+                    android:visibility="gone">
 
 
                     <LinearLayout
