--- a/app/src/main/res/layout/item_nearby_workspace.xml
+++ b/app/src/main/res/layout/item_nearby_workspace.xml
@@ -14,8 +14,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
@@ -23,31 +23,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="8dp">
 
-
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:id="@+id/pic_cont"
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <ImageView
                     android:id="@+id/pic"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="120dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/place_holder"
                     android:transitionName="@{@string/transition_photo + info.id}" />
 
                 <TextView
                     android:id="@+id/month_price"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_margin="8dp"
                     android:background="#7a000000"
-                    android:padding="8dp"
-                    android:textColor="@color/grey0" />
+                    android:padding="4dp"
+                    android:textColor="@color/grey0"
+                    android:textSize="10sp" />
 
             </FrameLayout>
 
@@ -55,46 +55,61 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
                 android:clickable="true"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/title"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@{info.name}"
-                    android:textColor="@color/text"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:transitionName="@{@string/transition_title + info.id}" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/direction"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="@{info.name}"
+                        android:textColor="@color/text"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:transitionName="@{@string/transition_title + info.id}" />
+
+                    <ImageView
+                        android:id="@+id/direction"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:clickable="true"
+                        android:src="@drawable/ic_location_on" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/city"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:src="@drawable/ic_location_on" />
+                    android:hint="City"
+                    android:text="@{info.city}"
+                    android:textColor="@color/text"
+                    android:transitionName="@{@string/transition_city + info.id}" />
+                <!--android:text="@{info.address + ` ` +  info.postalArea}"-->
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:hint="Address"
+                    android:maxLines="3"
+                    android:text="@{info.address + ` ` +  info.postalArea}"
+                    android:textColor="@color/text"
+                    android:textSize="10sp" />
+
 
             </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{info.city}"
-                android:textColor="@color/text"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{info.address + ` \n Pin Code:` +  info.postalArea}"
-                android:textColor="@color/text"
-                android:textSize="12sp" />
 
 
         </LinearLayout>
