--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -13,16 +13,15 @@
         android:orientation="horizontal">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/logo"
             android:layout_width="40dp"
-            android:layout_gravity="center_vertical"
             android:layout_height="40dp"
-            app:civ_border_width="2dp"
-            android:layout_marginRight="4dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
-            app:civ_border_color="@color/colorPrimary"/>
+            android:layout_marginRight="4dp"
+            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_width="2dp" />
 
         <TextView
             android:id="@+id/name"
@@ -33,9 +32,18 @@
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="@color/grey10"
             android:textSize="16sp"
             android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="8dp" />
 
 
     </LinearLayout>
