--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#0088d8</color>
     <color name="colorPrimaryDark">#0176BA</color>
     <color name="colorAccent">#5fb7ff</color>
+
+    <color name="light_blue">#b7ddfc</color>
+
     <color name="red">#ff0000</color>
     <color name="black">#000000</color>
 
@@ -25,5 +28,9 @@
     <color name="light_grey">#e6e6e6</color>
     <color name="dark_grey">#8f8f8f</color>
     <color name="bg">#F5F5F6</color>
+
+    <color name="textPrimary">#2e303d</color>
+    <color name="textSecondary">#992e303d</color>
+    <color name="textDisabled">#662e303d</color>
 
 </resources>
